--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -19,27 +19,15 @@ setw -g monitor-bell off
 
 set -g history-limit 10000
 
-set-hook -g pane-focus-in "run -b 'bash ~/.config/tmux/fzf_panes.tmux update_mru_pane_ids'"
-bind -n M-w run -b 'bash ~/.config/tmux/fzf_panes.tmux new_window'
+# set-hook -g pane-focus-in "run -b 'bash ~/fzf_panes.tmux update_mru_pane_ids'"
+bind -n M-w run -b "tmux new_window 'zsh --init'"
 
-bind r source-file ~/.config/tmux/.tmux.conf \; display '~/.tmux.conf sourced'
 # reload configuration
-
-set -ga update-environment '\
-DISPLAY DBUS_SESSION_BUS_ADDRESS \
-QT_IM_MODULE QT_QPA_PLATFORMTHEME \
-SESSION_MANAGER \
-XDG_CONFIG_HOME XDG_CACHE_HOME XDG_DATA_HOME\
-XDG_MENU_PREFIX XDG_RUNTIME_DIR XDG_SESSION_CLASS \
-XDG_SESSION_DESKTOP XDG_SESSION_TYPE XDG_CURRENT_DESKTOP \
-XMODIFIERS \
-FZF_DEFAULT_OPTS \
-'
-set-hook -g client-attached 'run -b "cut -c3- ~/.config/tmux/.tmux.conf | sh -s update_env_event"'
+bind r source-file ~/.config/tmux/tmux.conf \; display 'tmux.conf sourced'
 
 # -- prefix
-# unbind C-b
-# set -g prefix 'C-s'
+unbind C-b
+set -g prefix 'C-s'
 
 # -- display
 set -g base-index 1
@@ -93,7 +81,7 @@ bind -n M-9 select-window -t 9
 
 
 bind -n M-! join-pane -t :1
-bind -n M-@ join-pane -t :2
+bind -n M-@ join-pane -t :3
 bind -n 'M-#' join-pane -t :3
 bind -n 'M-$' join-pane -t :4
 bind -n M-% join-pane -t :5
@@ -107,7 +95,7 @@ bind j split-window -v -c "#{pane_current_path}"
 bind h split-window -hb -c "#{pane_current_path}"
 bind l split-window -h -c "#{pane_current_path}"
 
-bind -n M-f resize-pane -Z
+# bind -n M-f resize-pane -Z
 
 # pane navigation
 bind 1 select-pane -t:.1
@@ -149,23 +137,17 @@ set -g status-keys emacs
 set -g mode-keys vi
 
 bind -n M-v copy-mode
-
+bind -T copy-mode-vi Y send-keys -X copy-end-of-line
+bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi C-v send-keys -X rectangle-toggle
-bind -T copy-mode-vi h send-keys -X cursor-left
-bind -T copy-mode-vi k send-keys -X cursor-up
-bind -T copy-mode-vi j send-keys -X cursor-down
-bind -T copy-mode-vi l send-keys -X cursor-right
-bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+bind -T copy-mode-vi w send-keys -X next-word-end
+bind -T copy-mode-vi a send-keys -X start-of-line
+bind -T copy-mode-vi e send-keys -X end-of-line
 bind -T copy-mode-vi Y send-keys -X copy-end-of-line
-# bind -T copy-mode-vi w send-keys -X next-word-end
-# bind -T copy-mode-vi U send-keys -N 5 -X cursor-up
-# bind -T copy-mode-vi E send-keys -N 5 -X cursor-down
-# bind -T copy-mode-vi N send-keys -X start-of-line
-# bind -T copy-mode-vi I send-keys -X end-of-line
-# bind -T copy-mode-vi = send-keys -X search-again
-# bind -T copy-mode-vi = send-keys -X search-reverse
-
+bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+bind -T copy-mode-vi = send-keys -X search-again
+bind -T copy-mode-vi = send-keys -X search-reverse
 
 bind b list-buffers
 bind p paste-buffer
@@ -175,20 +157,15 @@ bind C-g if-shell '[[ $(tmux showw synchronize-panes | cut -d\  -f2) == "on" ]]'
 'setw synchronize-panes off; set -g pane-border-style fg=magenta' \
 'setw synchronize-panes on; set -g pane-border-style fg=red'
 
+# set -g status-on
 # -- toggle_status
 bind s if-shell '[[ $(tmux show -g status | cut -d\  -f2) == "on" ]]' \
 'set -g status off' \
 'set -g status on'
 
-# -- theme
-#set -g status off
-
 # panes
-#setw -g pane-border-status bottom
 setw -g pane-border-format '#[bold]#{?#{&&:#{pane_active},#{client_prefix}},#[underscore],}\
 #{?pane_active,❐ #S:#I/#{session_windows} ,}#{?window_zoomed_flag,⬢,❄} #P ⇒ #{pane_tty} #{pane_current_command}'
-#set -g pane-active-border-style fg=brightblue
-#set -g pane-border-style fg=magenta
 
 # windows
 set -g status-justify 'centre'
@@ -198,17 +175,8 @@ setw -g window-status-separator ''
 
 # default statusbar colors
 set -g status-bg black
-#set -g status-left ' #[fg=magenta,bold]❐ #S'
-#set -g status-left '#[fg=brightyellow] #{?client_prefix,⌨ ,  }  #[fg=magenta,bold] %Y-%m-%d %H:%M '
-#set -g status-right '#(rainbarf --battery --remaining --bolt --tmux --rgb)'
-#set -g status-left "#[fg=magenta,bold] %Y-%m-%d %H:%M | #[fg=brightblue]#(curl icanhazip.com) #(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #(ifconfig en3 | grep 'inet ' | awk '{print \"en3 \" $2}') #(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
 setw -g window-status-format '#[fg=brightblue] #I #W '
 setw -g window-status-current-format '#[fg=magenta,bold] #I #W:#F'
 setw -g window-status-activity-style bg=black
 setw -g window-status-bell-style bg=black
-#set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]⮀#[fg=colour255, bg=colour27] #I ⮁ #W #[fg=colour27, bg=colour235]⮀"
-
-
-set-option -g status-left "#(~/.config/tmux/tmux-powerline/powerline.sh left)"
-set-option -g status-right "#(~/.config/tmux/tmux-powerline/powerline.sh right)"
 
