--- a/zim/.zimrc
+++ b/zim/.zimrc
@@ -58,6 +58,6 @@ zmodule zsh-users/zsh-autosuggestions
 # }}} End configuration added by Zim install
 
 
-zmodule jeffreytse/zsh-vi-mode
+# zmodule jeffreytse/zsh-vi-mode
 zmodule pabloariasal/zfm
 zmodule Aloxaf/fzf-tab
